--- a/README.Rmd
+++ b/README.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# portafolio2022
+# ~~portafolio2022~~
 
 <!-- badges: start -->
 <!-- badges: end -->
@@ -20,7 +20,7 @@ The goal of portafolio2022 is to ...
 
 What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
 
-```{r cars}
+```{r cars, echo=TRUE}
 summary(cars)
 ```
 
